# raccoon-engine

./: CMakeLists.txt  LICENSE  README.md  makefile
Engine/: .prefs
Engine/assets/: helium.lua  primitives.FML
docs/dos/: index.html  out.js.mem
io_scene_FML/: __init__.py  exporter.py
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Main_Editor.cpp
src/Game/: CMakeLists.txt  Main_Game.cpp
src/core/: CMakeLists.txt
src/core/UI/: button.cpp  button.h  menu.cpp  menu.h  textButton.cpp  textButton.h  textfield.cpp  textfield.h
src/core/data_types/: animation.cpp  animation.h  armature.h  armature_1.cpp  armature_2.cpp  audio.cpp  audio.h  bone.cpp  bone.h  rawmesh.h  rawmesh_1.cpp  rawmesh_2.cpp  shader.cpp  shader.h  texture.cpp  texture.h
src/core/main/: game.cpp  game.h  input.cpp  input.h  main.cpp~  scene.cpp  scene.h
src/core/maths/: mat4.cpp  mat4.h  maths.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/core/maths/test/: a.out  t.cpp
src/core/render/: .physics.h.swp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  camera.cpp  camera.h  entity.cpp  entity.h  light.cpp  light.h  physics.cpp  physics.h  scrdef.cpp  script.cpp  script.h  skykbox.cpp  skykbox.h  sprite.cpp  sprite.h  transform.cpp  transform.h  waypoint.cpp  waypoint.h  window.cpp  window.h
src/core/text/: font.cpp  font.h  rectbinpack.cpp  rectbinpack.h
src/core/utils/: data.cpp  data.h  fpscounter.cpp  fpscounter.h  g_dir.cpp  g_dir.h
src/editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  Icons.cpp  VertexSnap.cpp  components.h  (+15 more)
(+41 files in other folders)
